Set min-height on snail image to prevent content jumping.

--- a/_src/css/base.css
+++ b/_src/css/base.css
@@ -146,4 +146,5 @@ header h1 {
 
 header img {
 	max-width: 300px;
+  min-height: 207px;
 }
